Update Card Margin

--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,5 +1,7 @@
 .card {
     width: 339px;
     height: 375px;
-    background: #00a2e8
+    margin-top: 75px;
+    margin-left: 103px;
+    background-color: #00a2e8
 }
